Update docstring success codes
