# docs/swagger.json
@@ -233,7 +233,7 @@
                     "required": true
                 },
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Login successful Note: The below doesn't actually work but is important for understanding how the login/logout and session management system works. See issue here: https://github.com/swagger-api/swagger-ui/issues/5596 The session ID is returned in the Response headers `Set-Cookie` headers `session` key. You need to include this cookie in subsequent requests. If using Swagger UI, you can find the cookie in the network tab of the developer tools. Add the cookie to the request headers by clicking the Lock/Authorize button in the UI at the top of page for global authorization or on a per request basis at the endpoint level.\n",
                         "headers": {
                             "Set-Cookie": {
@@ -259,7 +259,7 @@
             "post": {
                 "description": "Logout a user.",
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Logout successful"
                     },
                     "400": {
